Remove forced left-align for headers inside Editor content area. Previous issue where headers wouldn't left-align doesn't seem to be present anymore

--- a/src/styles/Editor.scss
+++ b/src/styles/Editor.scss
@@ -58,7 +58,3 @@
   margin: 0;
   padding: 0;
 }
-
-.Editor-content h1, h2 {
-  text-align: left !important; /* wtf */
-}
